--- a/table_classifyer.ipynb
+++ b/table_classifyer.ipynb
@@ -544,8 +544,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tfidf_vector = TfidfVectorizer(stop_words='english', max_features=None, max_df=0.5, min_df=2, ngram_range=(1,1))\n",
-    "features_names = tfidf_vector.get_feature_names_out()"
+    "tfidf_vector = TfidfVectorizer(stop_words='english', max_features=None, max_df=0.5, min_df=2, ngram_range=(1,1))\n"
    ]
   },
   {
@@ -556,6 +555,15 @@
    "source": [
     "X_train = tfidf_vector.fit_transform(X_train)\n",
     "X_test = tfidf_vector.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_names = tfidf_vector.get_feature_names_out()"
    ]
   },
   {
